--- a/src/main/resources/templates/admin/menu_registration.html
+++ b/src/main/resources/templates/admin/menu_registration.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>메뉴 등록 페이지</title>
+        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,17 +56,27 @@
                         <div class="error-message"></div>
                     </div>
                     <div class="item-group">
-                        <label class="register-label">메뉴이름: </label>
+                        <label class="register-label">메뉴이름 </label>
                         <input type="text" class="register-input">
                         <div class="error-message"></div>
                     </div>
                     <div class="item-group">
-                        <label class="register-label">대인: </label>
+                        <label class="register-label">요일 </label>
                         <input type="text" class="register-input">
                         <div class="error-message"></div>
                     </div>
                     <div class="item-group">
-                        <label class="register-label">소인: </label>
+                        <label class="register-label">식사 시간 </label>
+                        <input type="text" class="register-input">
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="item-group">
+                        <label class="register-label">대인 </label>
+                        <input type="text" class="register-input">
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="item-group">
+                        <label class="register-label">소인 </label>
                         <input type="text" class="register-input">
                         <div class="error-message"></div>
                     </div>
