--- a/src/main/resources/static/css/admin/menu_registration.css
+++ b/src/main/resources/static/css/admin/menu_registration.css
@@ -51,18 +51,19 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .register-label {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     padding-left: 5px;
-    font-weight: 600;
+    font-size: 25px;
     color: #202020;
 }
 
 .register-input {
-    height: 35px;
+    font-size: 25px;
+    height: 30px;
 }
 
 .error-message {
@@ -72,12 +73,20 @@
     font-size: 12px;
 }
 
-.register-button {
-    margin-top: 30px;
-    width: 100%;
-    height: 40px;
+.category-select{
+    font-size: 25px;
+} 
 
-    font-weight: 600;
+.option {
+    font-size: 25px;
+}
+
+.register-button {
+    margin-top: 15px;
+    width: 100%;
+    height: 30px;
+
+    font-size: 25px;
 }
 
 .img-form {
