--- a/src/main/resources/templates/admin/reservation_management.html
+++ b/src/main/resources/templates/admin/reservation_management.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <title>예약 관리 페이지</title>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,116 +47,116 @@
             <h1 class="content-title">☆예약정보 조회☆</h1>
             <div class="table-container">
                 <table class="reservation-table">
-                    <thead>
+                    <tdead>
                         <tr>
                             <th>순번</th>
+                            <th>이름</th>
                             <th>예약날짜</th>
                             <th>예약시간</th>
-                            <th>이름</th>
-                            <th>인원수</th>
-                            <th>소인</th>
-                            <th>대인</th>
-                            <th>연락처</th>
+                            <th>폰번호</th>
                             <th>이메일</th>
+                            <th>대인</th>
+                            <th>소인</th>
+                            <th>총 인원수</th>
                             <th>요청사항</th>
                         </tr>
                         <tr>
                             <td>순번</td>
+                            <td>이름</td>
                             <td>예약날짜</td>
                             <td>예약시간</td>
-                            <td>이름</td>
-                            <td>인원수</td>
-                            <td>소인</td>
-                            <td>대인</td>
-                            <td>연락처</td>
+                            <td>폰번호</td>
                             <td>이메일</td>
+                            <td>대인</td>
+                            <td>소인</td>
+                            <td>총 인원수</td>
                             <td>요청사항</td>
                         </tr>
                         <tr>
                             <td>순번</td>
+                            <td>이름</td>
                             <td>예약날짜</td>
                             <td>예약시간</td>
-                            <td>이름</td>
-                            <td>인원수</td>
-                            <td>소인</td>
-                            <td>대인</td>
-                            <td>연락처</td>
+                            <td>폰번호</td>
                             <td>이메일</td>
+                            <td>대인</td>
+                            <td>소인</td>
+                            <td>총 인원수</td>
                             <td>요청사항</td>
                         </tr>
                         <tr>
                             <td>순번</td>
+                            <td>이름</td>
                             <td>예약날짜</td>
                             <td>예약시간</td>
-                            <td>이름</td>
-                            <td>인원수</td>
-                            <td>소인</td>
-                            <td>대인</td>
-                            <td>연락처</td>
+                            <td>폰번호</td>
                             <td>이메일</td>
+                            <td>대인</td>
+                            <td>소인</td>
+                            <td>총 인원수</td>
                             <td>요청사항</td>
                         </tr>
                         <tr>
                             <td>순번</td>
+                            <td>이름</td>
                             <td>예약날짜</td>
                             <td>예약시간</td>
-                            <td>이름</td>
-                            <td>인원수</td>
-                            <td>소인</td>
-                            <td>대인</td>
-                            <td>연락처</td>
+                            <td>폰번호</td>
                             <td>이메일</td>
+                            <td>대인</td>
+                            <td>소인</td>
+                            <td>총 인원수</td>
                             <td>요청사항</td>
                         </tr>
                         <tr>
                             <td>순번</td>
+                            <td>이름</td>
                             <td>예약날짜</td>
                             <td>예약시간</td>
-                            <td>이름</td>
-                            <td>인원수</td>
-                            <td>소인</td>
-                            <td>대인</td>
-                            <td>연락처</td>
+                            <td>폰번호</td>
                             <td>이메일</td>
+                            <td>대인</td>
+                            <td>소인</td>
+                            <td>총 인원수</td>
                             <td>요청사항</td>
                         </tr>
                         <tr>
                             <td>순번</td>
+                            <td>이름</td>
                             <td>예약날짜</td>
                             <td>예약시간</td>
-                            <td>이름</td>
-                            <td>인원수</td>
-                            <td>소인</td>
-                            <td>대인</td>
-                            <td>연락처</td>
+                            <td>폰번호</td>
                             <td>이메일</td>
+                            <td>대인</td>
+                            <td>소인</td>
+                            <td>총 인원수</td>
                             <td>요청사항</td>
                         </tr>
                         <tr>
                             <td>순번</td>
+                            <td>이름</td>
                             <td>예약날짜</td>
                             <td>예약시간</td>
-                            <td>이름</td>
-                            <td>인원수</td>
-                            <td>소인</td>
-                            <td>대인</td>
-                            <td>연락처</td>
+                            <td>폰번호</td>
                             <td>이메일</td>
+                            <td>대인</td>
+                            <td>소인</td>
+                            <td>총 인원수</td>
                             <td>요청사항</td>
                         </tr>
                         <tr>
                             <td>순번</td>
+                            <td>이름</td>
                             <td>예약날짜</td>
                             <td>예약시간</td>
-                            <td>이름</td>
-                            <td>인원수</td>
-                            <td>소인</td>
-                            <td>대인</td>
-                            <td>연락처</td>
+                            <td>폰번호</td>
                             <td>이메일</td>
+                            <td>대인</td>
+                            <td>소인</td>
+                            <td>총 인원수</td>
                             <td>요청사항</td>
                         </tr>
-                    </thead>
+                    </tdead>
                 </table>
             </div>
             <div class="page-controller">
@@ -169,8 +170,8 @@
                 </ul>
                 <a href="">다음</a>
             </div>
-    
     </main>
 </div>
+<script src="/static/js/admin/reservation.js"></script>
 </body>
 </html>
