메뉴 db 불러오기 성공

--- a/src/main/resources/templates/admin/reservation_management.html
+++ b/src/main/resources/templates/admin/reservation_management.html
@@ -45,9 +45,13 @@
 
         <div class="content-container">
             <h1 class="content-title">☆예약정보 조회☆</h1>
+            <div class="searchs">
+                <input type="search" class="search-input">
+                <button type="button" class="search-button">검색</button>
+            </div>
             <div class="table-container">
                 <table class="reservation-table">
-                    <tdead>
+                    <thead>
                         <tr>
                             <th>순번</th>
                             <th>이름</th>
@@ -60,103 +64,9 @@
                             <th>총 인원수</th>
                             <th>요청사항</th>
                         </tr>
-                        <tr>
-                            <td>순번</td>
-                            <td>이름</td>
-                            <td>예약날짜</td>
-                            <td>예약시간</td>
-                            <td>폰번호</td>
-                            <td>이메일</td>
-                            <td>대인</td>
-                            <td>소인</td>
-                            <td>총 인원수</td>
-                            <td>요청사항</td>
-                        </tr>
-                        <tr>
-                            <td>순번</td>
-                            <td>이름</td>
-                            <td>예약날짜</td>
-                            <td>예약시간</td>
-                            <td>폰번호</td>
-                            <td>이메일</td>
-                            <td>대인</td>
-                            <td>소인</td>
-                            <td>총 인원수</td>
-                            <td>요청사항</td>
-                        </tr>
-                        <tr>
-                            <td>순번</td>
-                            <td>이름</td>
-                            <td>예약날짜</td>
-                            <td>예약시간</td>
-                            <td>폰번호</td>
-                            <td>이메일</td>
-                            <td>대인</td>
-                            <td>소인</td>
-                            <td>총 인원수</td>
-                            <td>요청사항</td>
-                        </tr>
-                        <tr>
-                            <td>순번</td>
-                            <td>이름</td>
-                            <td>예약날짜</td>
-                            <td>예약시간</td>
-                            <td>폰번호</td>
-                            <td>이메일</td>
-                            <td>대인</td>
-                            <td>소인</td>
-                            <td>총 인원수</td>
-                            <td>요청사항</td>
-                        </tr>
-                        <tr>
-                            <td>순번</td>
-                            <td>이름</td>
-                            <td>예약날짜</td>
-                            <td>예약시간</td>
-                            <td>폰번호</td>
-                            <td>이메일</td>
-                            <td>대인</td>
-                            <td>소인</td>
-                            <td>총 인원수</td>
-                            <td>요청사항</td>
-                        </tr>
-                        <tr>
-                            <td>순번</td>
-                            <td>이름</td>
-                            <td>예약날짜</td>
-                            <td>예약시간</td>
-                            <td>폰번호</td>
-                            <td>이메일</td>
-                            <td>대인</td>
-                            <td>소인</td>
-                            <td>총 인원수</td>
-                            <td>요청사항</td>
-                        </tr>
-                        <tr>
-                            <td>순번</td>
-                            <td>이름</td>
-                            <td>예약날짜</td>
-                            <td>예약시간</td>
-                            <td>폰번호</td>
-                            <td>이메일</td>
-                            <td>대인</td>
-                            <td>소인</td>
-                            <td>총 인원수</td>
-                            <td>요청사항</td>
-                        </tr>
-                        <tr>
-                            <td>순번</td>
-                            <td>이름</td>
-                            <td>예약날짜</td>
-                            <td>예약시간</td>
-                            <td>폰번호</td>
-                            <td>이메일</td>
-                            <td>대인</td>
-                            <td>소인</td>
-                            <td>총 인원수</td>
-                            <td>요청사항</td>
-                        </tr>
-                    </tdead>
+                    </thead>
+                    <tbody>
+                    </tbody>
                 </table>
             </div>
             <div class="page-controller">
