--- a/src/main/resources/static/css/admin/menu_magement.css
+++ b/src/main/resources/static/css/admin/menu_magement.css
@@ -35,7 +35,7 @@
 }
 
 .content-title {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-size: 25px;
 }
 
@@ -135,6 +135,11 @@
 
 
 .info-text b {
+    font-size: 25px;
+}
+
+.info-text4 {
+    text-align: center;
     font-size: 25px;
 }
 
