--- a/src/main/resources/static/css/admin/menu_registration.css
+++ b/src/main/resources/static/css/admin/menu_registration.css
@@ -29,7 +29,7 @@
 
     flex-direction: row;
     justify-content: space-between;
-    height: 600px;
+    height: 700px;
 }
 
 .content-left, .content-right {
@@ -51,7 +51,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
 }
 
 .register-label {
@@ -82,17 +82,28 @@
 }
 
 .register-button {
-    margin-top: 15px;
+    margin-top: 10px;
     width: 100%;
     height: 30px;
 
     font-size: 25px;
+
+    background-color: rgb(237, 222, 255);
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.register-button:hover {
+    cursor: pointer;
+    background-color: rgb(217, 186, 255);
 }
 
 .img-form {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin-top: 45px;
 
     width: 100%;
     height: 100%;
@@ -103,12 +114,22 @@
 }
 
 .img-add-button {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     width: 100%;
     height: 40px;
 
     font-size: 20px;
     font-weight: 600;
+
+    background-color: rgb(237, 222, 255);
+    border: 1px solid black;
+    border-radius: 5px;
+
+}
+
+.img-add-button:hover {
+    cursor: pointer;
+    background-color: rgb(217, 186, 255);
 }
 
 .img-container {
@@ -139,5 +160,15 @@
     width: 48%;
     height: 40px;
 
-    font-weight: 600;
+    background-color: rgb(237, 222, 255);
+    border: 1px solid black;
+    border-radius: 5px;
+
+    font-size: 20px;
+}
+
+.img-register-button:hover, .img-cancel-button:hover {
+    cursor: pointer;
+    background-color: rgb(217, 186, 255);
+    color: black;
 }
