--- a/src/main/resources/templates/admin/menu_management.html
+++ b/src/main/resources/templates/admin/menu_management.html
@@ -49,125 +49,13 @@
         </div>
         
         <div class="content-container">
-            <div class="content-flex">
-                <div class="info-container">
-                    <div class="menu-desc">
-                        <div class="img-container">
-                            <img src="/static/images/gogi1.jpg" class="menu-img">
-                        </div> 
-                        <div class="menu-info">
-                            <div class="menu-code">메뉴-001</div>
-                            <h3 class="menu-name">맛있는 고기 냠냠</h2>
-                            <div class="info-text3">
-                                <div class="info-text menu-day"><b>평일 </b></div>
-                                <div class="info-text menu-meals"><b>&nbsp; 중식</b></div>
-                                </div>
-                            <div class="info-text1">
-                                <div class="info-text menu-age1"><b>-대인: </b>90,000</div>
-                                <div class="info-text menu-age2"><b>-소인: </b>50,000</div>
-                            </div>
-                            <div class="info-text2">
-                                <div class="info-text sales-pride"><b>판매기간: </b>상시/한정</div>
-                            </div>
-                            <div class="menu-icon">
-                                <div class="menu-change"><a href="/templates/admin/menu_correction.html"><i class="fa-solid fa-wand-magic-sparkles"></i></a></div>
-                                <button type="button" class="delete-button"><i class="fa-solid fa-eraser"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
-            <div class="content-flex">
-                <div class="info-container">
-                    <div class="menu-desc">
-                        <div class="img-container">
-                            <img src="/static/images/gogi2.jpg" class="menu-img">
-                        </div> 
-                        <div class="menu-info">
-                            <div class="menu-code">메뉴-002</div>
-                            <h3 class="menu-name">맛있는 고기 뇸뇸</h2>
-                            <div class="info-text3">
-                                <div class="info-text menu-day"><b>주말 </b></div>
-                                <div class="info-text menu-meals"><b>&nbsp; 석식</b></div>
-                             </div>
-                            <div class="info-text1">
-                                <div class="info-text menu-age1"><b>-대인: </b>100,000</div>
-                                <div class="info-text menu-age2"><b>-소인: </b>70,000</div>
-                            </div>
-                            <div class="info-text2">
-                                <div class="info-text sales-pride"><b>판매기간: </b>상시/한정</div>
-                            </div>
-                            <div class="menu-icon">
-                                <div class="menu-change"><a href="/templates/admin/menu_correction.html"><i class="fa-solid fa-wand-magic-sparkles"></i></a></div>
-                                <button type="button" class="delete-button"><i class="fa-solid fa-eraser"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-flex">
-                <div class="info-container">
-                    <div class="menu-desc">
-                        <div class="img-container">
-                            <img src="/static/images/gogi3.jfif" class="menu-img">
-                        </div> 
-                        <div class="menu-info">
-                            <div class="menu-code">메뉴-003</div>
-                            <h3 class="menu-name">맛있는 고기 앙앙</h2>
-                            <div class="info-text3">
-                                <div class="info-text menu-day"><b>평일,주말 </b></div>
-                                <div class="info-text menu-meals"><b>&nbsp; 조식</b></div>
-                                </div>
-                            <div class="info-text1">
-                                <div class="info-text menu-age1"><b>-대인: </b>90,000</div>
-                                <div class="info-text menu-age2"><b>-소인: </b>50,000</div>
-                            </div>
-                            <div class="info-text2">
-                                <div class="info-text sales-pride"><b>판매기간: </b>상시/한정</div>
-                            </div>
-                            <div class="menu-icon">
-                                <div class="menu-change"><a href="/templates/admin/menu_correction.html"><i class="fa-solid fa-wand-magic-sparkles"></i></a></div>
-                                <button type="button" class="delete-button"><i class="fa-solid fa-eraser"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-flex">
-                <div class="info-container">
-                    <div class="menu-desc">
-                        <div class="img-container">
-                            <img src="/static/images/gogi4.jfif" class="menu-img">
-                        </div> 
-                        <div class="menu-info">
-                            <div class="menu-code">메뉴-004</div>
-                            <h3 class="menu-name">맛있는 고기 옹옹</h2>
-                            <div class="info-text3">
-                                <div class="info-text menu-day"><b>평일</b></div>
-                                <div class="info-text menu-meals"><b>&nbsp; 석식</b></div>
-                                </div>
-                            <div class="info-text1">
-                                <div class="info-text menu-age1"><b>-대인: </b>90,000</div>
-                                <div class="info-text menu-age2"><b>-소인: </b>50,000</div>
-                            </div>
-                            <div class="info-text2">
-                                <div class="info-text sales-pride"><b>판매기간: </b>상시/한정</div>
-                            </div>
-                            <div class="menu-icon">
-                                <div class="menu-change"><a href="/templates/admin/menu_correction.html"><i class="fa-solid fa-wand-magic-sparkles"></i></a></div>
-                                <button type="button" class="delete-button"><i class="fa-solid fa-eraser"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
         </div>
 
     </main>
 </div>
+<script src="/static/js/admin/menu_management.js"></script>
+
 </body>
 </html>
